// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchAuthorService.search() 1`] = `
Array [
  "NaNa说美股",
  "贝奇说股Beckie_Analysis",
  "Money_Manta的投资频道",
]
`;

exports[`SearchAuthorService.search() 2`] = `
Array [
  "老汤美股财经",
  "美投讲美股",
  "非專業投資美股",
  "ERay说美股",
  "NaNa说美股",
  "贝奇说股Beckie_Analysis",
]
`;

exports[`SearchSymService.search() all 1`] = `
Array [
  "$AI",
  "$ICE",
  "$IPOE",
  "$WISH",
  "$ABBV",
  "$ABNB",
  "$ADBE",
  "$AAPL",
  "$DIS",
  "$NIO",
  "$COIN",
  "[[PIPE]]",
  "[[aaa]]",
  "$NUAN",
  "$NDAQ",
  "$DMYI",
  "[[Unit]]",
  "[[Warrant]]",
  "[[pointbet]]",
  "$UFPI",
  "[[SPAC]]",
  "[[SoFi]]",
  "[[Bill Miller]]",
]
`;

exports[`SearchSymService.search() all 2`] = `
Array [
  "[[半導體]]",
]
`;

exports[`SearchSymService.search() ticker only 1`] = `
Array [
  "$AI",
  "$ICE",
  "$IPOE",
  "$WISH",
  "$ABBV",
  "$ABNB",
  "$ADBE",
  "$AAPL",
  "$DIS",
  "$NIO",
  "$COIN",
  "$NUAN",
  "$NDAQ",
  "$DMYI",
  "$UFPI",
]
`;

exports[`SearchSymService.search() topic only 1`] = `
Array [
  "[[半導體]]",
]
`;
